Fix z-index

--- a/app/frontend/stylesheets/web/partial_layouts/default.scss
+++ b/app/frontend/stylesheets/web/partial_layouts/default.scss
@@ -22,7 +22,7 @@
     width: 240px;
     overflow-y: auto;
     position: fixed;
-    z-index: 2;
+    z-index: $zindex-popover;
   }
 }
 
